[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
description = ""
version = "0.1.0"

[tool.coverage.run]
omit = [
    "daos/db_professional_repository.py",
    "daos/db_project_repository.py",
    "daos/db_company_repository.py",
    "daos/db_person_repository.py"
]
